--- a/PowerToys Run/Settings/PowerToysRunSettings.json
+++ b/PowerToys Run/Settings/PowerToysRunSettings.json
@@ -2,16 +2,21 @@
   "PreviousHotkey": "",
   "Hotkey": "Alt \u002B Space",
   "UseCentralizedKeyboardHook": false,
+  "SearchQueryResultsWithDelay": true,
+  "SearchInputDelay": 150,
+  "SearchQueryTuningEnabled": false,
+  "SearchWaitForSlowResults": false,
+  "SearchClickedItemWeight": 5,
   "Language": "en",
   "Theme": 0,
   "StartupPosition": 0,
   "QueryBoxFont": "Microsoft Sans Serif",
   "ResultFont": "Microsoft Sans Serif",
   "AutoUpdates": false,
-  "WindowLeft": 240,
-  "WindowTop": 243,
+  "WindowLeft": 0,
+  "WindowTop": 0,
   "MaxResultsToShow": 4,
-  "ActivateTimes": 29,
+  "ActivateTimes": 0,
   "CustomPluginHotkeys": [],
   "DontPromptUpdateMsg": false,
   "EnableUpdateLog": false,
@@ -23,7 +28,7 @@
   "ClearInputOnLaunch": false,
   "RememberLastLaunchLocation": false,
   "IgnoreHotkeysOnFullscreen": false,
-  "StartedFromPowerToysRunner": true,
+  "StartedFromPowerToysRunner": false,
   "Proxy": {
     "Enabled": false,
     "Port": 0
