--- a/PowerToys Run/Settings/Plugins/Microsoft.Plugin.Program/ProgramPluginSettings.json
+++ b/PowerToys Run/Settings/Plugins/Microsoft.Plugin.Program/ProgramPluginSettings.json
@@ -1,5 +1,5 @@
 {
-  "LastIndexTime": "2022-06-02T00:00:00+08:00",
+  "LastIndexTime": "0001-01-01T00:00:00",
   "ProgramSources": [],
   "DisabledProgramSources": [],
   "ProgramSuffixes": [
